--- a/All.tex
+++ b/All.tex
@@ -32,8 +32,6 @@
 
 \begin{document}
 
-\maketitle
-
 \tableofcontents
 
 \section{Introduction}
@@ -81,6 +79,10 @@ Here is a demonstration how to use it in neovim:
   \url{https://asciinema.org/a/596819}
 \end{center}
 
+\begin{center}
+  \url{https://mathscinet.ams.org/mathscinet}.
+\end{center}
+
 % \cite{MR428626}
 
 % \printbibliography[resetnumbers=0]
@@ -90,6 +92,7 @@ Here is a demonstration how to use it in neovim:
 % \printbibheading
 % \printbibliography[keyword=major,heading=subbibliography,title={Major Sources}]
 % \printbibliography[keyword=minor,heading=subbibliography,title={Minor Sources}]
+\tableofcontents
 
 \citeall
 
